Ensure that the referrer for HTTPS to HTTP downloads is dropped.

BUG=730877

Review-Url: https://codereview.chromium.org/2927123002
Cr-Commit-Position: refs/heads/master@{#478255}

Former-commit-id: da5f4e24e21981cc72d2cf2baf3af78eefc79279